<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_layout_margin">

    <TextView
        android:id="@+id/text_variety_and_or_market"
        style="@style/CardFirstRowText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Arecal betlanut  long long long long  long long long long  long long long long  long long long long" />

    <TextView
        android:id="@+id/text_unit_price"
        style="@style/CardPriceUnit"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_modal_price" />

    <TextView
        android:id="@+id/text_market_and_or_district"
        style="@style/CardSecondRowText"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/text_unit_price"
        app:layout_constraintTop_toBottomOf="@+id/text_variety_and_or_market"
        tools:text="Chirala market, Prakasam district lonwer" />

    <TextView
        android:id="@+id/text_state_name"
        style="@style/CardThirdRowText"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_market_and_or_district"
        tools:text="Andhra Pradesh" />

    <TextView
        android:id="@+id/text_modal_price"
        style="@style/CardPriceHeaderAndPrice"
        app:layout_constraintStart_toStartOf="@+id/text_max_price"
        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
        tools:text="\u20B9 3950 per 100kg*" />

    <TextView
        android:id="@+id/header_modal_price"
        style="@style/CardPriceHeaderAndPrice"
        android:text="@string/modal_price_header"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/header_min_price"
        style="@style/CardPriceHeaderAndPrice"
        android:text="@string/min_price_header"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_min_price"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/text_min_price"
        style="@style/CardPriceHeaderAndPrice"
        app:layout_constraintStart_toStartOf="@+id/text_max_price"
        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
        tools:text="\u20B9 3500 per 100kg*" />

    <TextView
        android:id="@+id/header_max_price"
        style="@style/CardPriceHeaderAndPrice"
        android:text="@string/max_price_header"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_max_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/text_max_price"
        style="@style/CardPriceHeaderAndPrice"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/header_max_price"
        app:layout_constraintTop_toBottomOf="@+id/text_min_price"
        tools:text="\u20B9 4000 per 100kg*" />

    <TextView
        android:id="@+id/header_arrival"
        style="@style/CardPriceHeaderAndPrice"
        android:text="@string/arrival_header"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_arrival_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/text_arrival_date"
        style="@style/CardPriceHeaderAndPrice"
        app:layout_constraintStart_toStartOf="@+id/text_max_price"
        app:layout_constraintTop_toBottomOf="@+id/text_max_price"
        tools:text="30/05/2017" />

    <TextView
        android:id="@+id/evlo_promo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/share_marketing"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/teal_700"
        android:fontFamily="@font/nunito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date" />

    <TextView
        android:id="@+id/evlo_promo_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/intro_1_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/teal_700"
        android:fontFamily="@font/nunito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evlo_promo_title" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />


</android.support.constraint.ConstraintLayout>
