<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_market_district"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Chirala market, Prakasam district"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_state_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:paddingEnd="16dp"
        android:paddingLeft="0dp"
        android:paddingRight="16dp"
        android:paddingStart="0dp"
        android:paddingTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        tools:text="Andhra Pradesh"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text_market_district"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/header_modal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="@string/modal_price_header"
        app:layout_constraintRight_toRightOf="@+id/price_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/text_modal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
        tools:text="\u20B9 3950 per 100kg*" />

    <TextView
        android:id="@+id/header_min_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="@string/min_price_header"
        app:layout_constraintRight_toRightOf="@+id/price_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_min_price"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/text_min_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
        tools:text="\u20B9 3500 per 100kg*" />

    <TextView
        android:id="@+id/header_max_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="@string/max_price_header"
        app:layout_constraintRight_toRightOf="@+id/price_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_max_price"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/text_max_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_min_price"
        tools:text="\u20B9 4000 per 100kg*" />

    <TextView
        android:id="@+id/header_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="@string/arrival_header"
        app:layout_constraintRight_toRightOf="@+id/price_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_arrival_date"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/text_arrival_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textSize="18sp"
        tools:text="30/05/2017"
        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/text_max_price" />

    <TextView
        android:id="@+id/text_unit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
        android:text="@string/unit_of_price" />


    <TextView
        android:id="@+id/details_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableLeft="@drawable/more_detail_state"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/more_detail_state"
        android:padding="@dimen/card_action_button_padding"
        android:text="@string/details_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableLeft="@drawable/bookmark_fill"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/bookmark_fill"
        android:gravity="center"
        android:padding="@dimen/card_action_button_padding"
        android:text="@string/favorite_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/bookmark_states"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/details_icon"
        app:layout_constraintRight_toLeftOf="@+id/share_icon"
        app:layout_constraintTop_toTopOf="@+id/details_icon" />

    <TextView
        android:id="@+id/share_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableLeft="@drawable/share_state"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/share_state"
        android:gravity="center"
        android:padding="@dimen/card_action_button_padding"
        android:text="@string/share_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/favorite_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_icon" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>
