<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/intro_root"
    tools:context=".ui.intro.IntroActivity"
    android:background="@color/teal_700">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/market_intro" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="@string/intro_1_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/market_blueishWhite_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageView
        android:id="@+id/not_connected"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:tint="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/ic_cloud_off_black_24px"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:minLines="0"
        android:text="@string/intro_1_progress"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/market_blueishWhite_text"
        app:layout_goneMarginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/not_connected" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:theme="@style/Progressbar.TealComp"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <Button
        android:id="@+id/getStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:onClick="onGetStarted"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:text="@string/intro_button"
        android:textColor="@color/teal_700_comp_text"
        android:textStyle="bold"
        android:theme="@style/GetStartedBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</android.support.constraint.ConstraintLayout>
